carousel positioning fixes + alignment

--- a/front-end/style.css
+++ b/front-end/style.css
@@ -634,7 +634,7 @@ select {
   margin-inline: auto;
   justify-content: space-evenly;
   padding-top: 2vw;
-  padding-bottom: 5vw;
+  padding-bottom: 8vw;
 }
 
 .articles-card {
@@ -807,7 +807,7 @@ select {
   width: 46vw;
   margin-inline: auto;
   margin-top: 5vw;
-  padding-bottom: 12vw;
+  padding-bottom: 8vw;
   position: relative;
 }
 
@@ -872,6 +872,7 @@ select {
   border: solid var(--darkblue-color);
   border-width: 0 0.2vw 0.2vw 0;
   padding: 0.4vw;
+  margin-bottom: 2vw;
 }
 
 #articles-big-btn-arrow-reversed {
@@ -1621,7 +1622,8 @@ select {
 
   .carousel-button-container span {
     padding: 0.7vw;
-    border-width: 0 0.3vw 0.3vw 0;
+    border-width: 0 0.3vw 0.3vw 0;  
+    margin-top: 5vw;
   }
 
   #continue-reading-carousel-content div {
@@ -1686,6 +1688,10 @@ select {
   #continue-reading-carousel-content div {
     height: 25vh;
     min-width: 45%;
+  }
+
+  .carousel-button-container span {
+    margin-top: 8vw;
   }
 
   #footer-picture {
@@ -1793,6 +1799,11 @@ select {
 
   #continue-reading-carousel-content div p {
     font-size: 2.5vw;
+  }
+
+  .carousel-button-container span {
+    margin-top: 10vw;
+    border-width: 0 0.5vw 0.5vw 0;
   }
 
   #footer-logo {
